@@ -5,6 +5,10 @@ Changes in EVER version 1.3
  - Under R 4.0.0 or later, old versions of the EVER package need to be re-installed
    from sources (i.e. local .tar.gz files). Binary distributions of old versions
    (i.e. local .zip files) are expected not to work under R 4.0.0 or later.
+ - kottcalibrate, bounds.hint: now equality of model.formulae is checked with
+   all.equal() instead of identical(), so that environment mismatches are neglected.
+   This is desirable when the model.formulae being compared have been generated
+   within the body of different functions, but are equal when deparsed.
 
 
 Changes in EVER version 1.2
